[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wttch-train-helper"
version = "0.0.15"
authors = [
    { name = "Wttch", email = "wttch@wttch.com" },
]
description = "Wttch's train helper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wttch96/train-helper"
Issues = "https://github.com/wttch96/train-helper/issues"